--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
     <!-- BootStrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -35,12 +35,14 @@
       Learn how to configure a non-root public URL by running `npm run build`
     -->
     <style>
-      html,body,#root{
+      html,
+      body,
+      #root {
         height: 100%;
         width: 100%;
       }
     </style>
-    <title>React App</title>
+    <title>Book Bug</title>
   </head>
   <body>
     <div id="root"></div>
